Mon Dec 13 12:50:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Added q as usable format specifier to print out a int64 value. Not
          usable when no native int64 is available.

Mon Dec 13 12:26:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
        * ace/config-win32-common.h:
          Added ACE_INT64 typedef. Note that there is no emulated ACE_INT64,
          it is just defined for platforms having such a type natively. In the
          future we could deliver an emulation, but with this typedef at least
          people trying to work on multiple platforms with native int64 can use
          this typedef to get portable code

Mon Dec 13 04:34:18 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Release:
	  Removed some old files from the release

	* bin/make_Release:

	  Bootstrapped autoconf with TAO instead of just ACE.

Mon Dec 13 04:25:24 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Release:

	  Added protocols directory.  Thanks to JT for letting me know
	  this.

Mon Dec 13 00:14:01 2004  Olli Savia  <ops@iki.fi>

        * protocols/ace/HTBP/HTBP_Filter.cpp:
          Removed unnecessary <sstream> include.

        * tests/Reactor_Dispatch_Order_Test.cpp:
          LynxOS 3.x needs the same special handling as OpenBSD to
          pass this test.

Sat Dec 11 17:38:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_T.h:
          Fixed incorrect method declarations and not needed ACE_INLINE

Sat Dec 11 17:26:09 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * bin/tao_other_tests.lst:

          Added a new test to the daily builds.

Sat Dec 11 10:39:38 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/{Atomic_Op.h,Atomic_Op_T.h,Atomic_Op_T.inl,Atomic_Op_T.inl}
          (operator=): Updated the ACE_Atomic_Op so that it allows