@@ -1,3 +1,9 @@
+Mon Dec 13 06:33:42 2004  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* ace/config-netbsd.h:
+
+	  Provide ACE_INT64 typedef.
+
 Mon Dec 13 12:50:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Log_Msg.cpp:
